<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">QuickTiles</string>
    <string name="app_icon_credit_link" translatable="false">https://www.flaticon.com/authors/nikita-golubev</string>
    <string name="open_source_libraries">Open source libraries</string>
    <string name="credits">Credits</string>
    <string name="credits_description" translatable="false"><![CDATA[
        App icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
        <br>
        Toggle-split-screen icon made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        <br>
        Following projects were used:
        <ul>
            <li><a href="https://github.com/mustafa01ali/Dev-Tiles">Dev-Tiles</a> by Mustafa Ali under <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License 2.0</a></li>
            <li><a href="https://github.com/adriangl/Dev-QuickSettings">Dev-QuickSettings</a> by Adrián García under <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License 2.0</a></li>
            <li><a href="https://github.com/rascarlo/AdaptiveBrightnessTile">Adaptive Brightness Tile</a> by rascarlo under <a href="https://www.gnu.org/licenses/gpl-3.0.txt">GNU GPLv3</a></li>
            <li><a href="https://github.com/rascarlo/PowerButtonTile">PowerButtonTile/a> by rascarlo under <a href="https://www.gnu.org/licenses/gpl-3.0.txt">GNU GPLv3</a></li>
            <li><a href="https://github.com/fei-ke/Greyscale">Greyscale</a> by fei-ke under <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License 2.0</a></li>
        </ul>
]]></string>

    <string name="permission_required">Permission Required!</string>
    <string name="permission_required_description">To use this feature, a permission has to be granted. Copy the command below and execute it on a PC or use Root:\n\n%s\n</string>
    <string name="permission_notification_policy_description">To use this feature, a permission has to be granted. Please open the settings and grant the \"Do Not Disturb access\" permission.</string>
    <string name="permission_modify_system_settings_description">To use this feature, a permission has to be granted. Please open the settings and grant the \"Modifying system settings\" permission.</string>
    <string name="permission_root_description" translatable="false">To use this feature, it is required to have a rooted phone and to grant root permissions to this app.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="copy_text">Copy</string>
    <string name="copy_success">Copied Successful</string>
    <string name="root">Root</string>
    <string name="root_failure">Root permission not granted!</string>

    <string name="media_control">Media Control</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next_song">Next</string>
    <string name="previous_song">Previous</string>
    <string name="media_volume">Media Volume</string>

    <string name="system_utilities">System Utilities</string>
    <string name="grayscale">Grayscale</string>
    <string name="adaptive_brightness">Adaptive Brightness</string>
    <string name="development">Development</string>
    <string name="finish_activities">Always Finish Activities</string>
    <string name="usb_debugging">USB Debugging</string>
    <string name="wireless_usb_debugging" tools:ignore="MissingTranslation">Wireless USB Debugging</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="animator_duration">Animator Duration Scale</string>
    <string name="animator_off">Animation Off</string>
    <string name="animator_scale_0_5x">Animation Scale 0.5x</string>
    <string name="animator_scale_1x">Animation Scale 1x</string>
    <string name="animator_scale_1_5x">Animation Scale 1.5x</string>
    <string name="animator_scale_2x">Animation Scale 2x</string>
    <string name="animator_scale_5x">Animation Scale 5x</string>
    <string name="animator_scale_10x">Animation Scale 10x</string>
    <string name="show_taps">Show Taps</string>
    <string name="disable_all_animations">Disable All Animations</string>
    <string name="enable_all_animations">Enable All Animations</string>
    <string name="new_alarm">New Alarm</string>
    <string name="new_timer">New Timer</string>
    <string name="take_photo">Take Photo</string>
    <string name="record_video">Record Video</string>
    <string name="open_calculator">Open Calculator</string>
    <string name="open_volume_panel">Volume Panel</string>
    <string name="adjust_brightness">Adjust Brightness</string>
    <string name="open_files">Open File Manager</string>
    <string name="free_space">Free Space</string>
    <string name="battery">Battery Level</string>
    <string name="vpn">Open VPN</string>
    <string name="data_usage">Data Usage</string>
    <string name="about_phone">About Phone</string>
    <string name="connected_devices">Connected Devices</string>
    <string name="notification_history">Notification History</string>
    <string name="search_settings">Search Settings</string>
    <string name="new_event">New Event</string>
    <string name="make_call">Make Call</string>
    <string name="no_app_found">No matching app installed!</string>
    <string name="counter">Counter</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="infinite">Infinite</string>
    <string name="seconds">Seconds</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="vibrate_on_calls">Vibrate On Calls</string>
    <string name="vibrate">Vibrate</string>
    <string name="priority_only">Priority Only</string>
    <string name="alarms_only">Alarms Only</string>
    <string name="total_silence">Total Silence</string>
    <string name="switch_volume_modes">Switch Volume Modes</string>
    <string name="force_rotation">Force Rotation</string>
    <string name="auto_rotation">Auto Rotation</string>
    <string name="fixed_rotation">Fixed Rotation (%s)</string>
    <string name="fix_rotation">Fix Rotation</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="zero_degrees">0°</string>
    <string name="ninety_degrees">90°</string>
    <string name="onehundredeighty_degrees">180°</string>
    <string name="twohundredseventy_degrees">270°</string>
    <string name="open_apps">Open Apps</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="screen_cast">Screen Cast</string>
    <string name="developer_options">Developer Options</string>
    <string name="languages">Languages</string>
    <string name="open_settings">Open Settings</string>
    <string name="on_which_connection">On which Connection</string>
    <string name="custom_app">Custom App</string>
    <string name="switch_silence_loud">Switch between Loud and Silence</string>
    <string name="silence">Silence</string>
    <string name="normal">Normal</string>
    <string name="display">Display</string>
    <string name="home_app">Home App</string>
    <string name="privacy">Privacy</string>
    <string name="personal_dictionary">Personal Dictionary</string>
    <string name="split_screen">Split Screen</string>

    <string name="select_an_app">Select an app</string>
    <string name="system_apps_are_excluded">System apps are excluded</string>

    <string name="an_error_occurred">An error occurred</string>
    <string name="unable_to_get_ip_address" translatable="false">Error: Unable to get local IP address</string>
    <string name="permission_accessibility_service_description">To use this feature, a permission has to be granted. Please open the settings and select %s as \"Accessibility Service\".</string>
    <string name="accessibility_service_description">This service is required for some tiles in order to work.</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="screenshot">Screenshot</string>
    <string name="power_menu">Power Menu</string>

    <string name="pref_keep_screen_on_mode_ac_adapter">When connected to an AC adapter</string>
    <string name="pref_keep_screen_on_mode_usb_port">When connected to an USB port</string>
    <string name="pref_keep_screen_on_mode_wireless">When connected to a wireless source</string>
    <string name="pref_keep_screen_on_mode_any">When connected to any power source</string>
</resources>