<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.bytehamster.lib.preferencesearch.SearchPreference android:key="searchPreference" />

    <PreferenceCategory android:title="@string/media_control">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_play_pause"
            android:key="play_pause"
            android:title="@string/play_pause" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_skip_next"
            android:key="next_song"
            android:title="@string/next_song" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_skip_previous"
            android:key="previous_song"
            android:title="@string/previous_song" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_music_video"
            android:key="media_volume"
            android:title="@string/media_volume" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_utilities">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_alarm_add"
            android:key="new_alarm"
            android:title="@string/new_alarm" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_timer"
            android:key="new_timer"
            android:title="@string/new_timer" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_photo_camera"
            android:key="open_camera"
            android:title="@string/open_camera" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_grid_on"
            android:key="open_calculator"
            android:title="@string/open_calculator" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_volume_up"
            android:key="open_volume_panel"
            android:title="@string/open_volume_panel" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_brightness_high"
            android:key="adjust_brightness"
            android:title="@string/adjust_brightness" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_folder"
            android:key="open_files"
            android:title="@string/open_files" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_battery_full"
            android:key="battery"
            android:title="@string/battery" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_vpn_key"
            android:key="vpn"
            android:title="@string/vpn" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_grayscale"
            android:key="grayscale"
            android:summary="@string/fei_ke_credit"
            android:title="@string/grayscale" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_brightness_auto"
            android:key="adaptive_brightness"
            android:summary="@string/rascarlo_credit"
            android:title="@string/adaptive_brightness" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/development">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_usb_debugging_enabled"
            android:key="usb_debugging"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/usb_debugging" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_demo_mode_enabled"
            android:key="demo_mode"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/demo_mode" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_show_taps_enabled"
            android:key="show_taps"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/show_taps"
            app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_keep_screen_on_enabled"
            android:key="keep_screen_on"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/keep_screen_on" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_finish_activities_enabled"
            android:key="finish_activities"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/finish_activities" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_animator_duration_enabled"
            android:key="animator_duration"
            android:summary="@string/adrian_garcia_credit"
            android:title="@string/animator_duration" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_animation_on"
            android:key="disable_all_animations"
            android:summary="@string/mustafa_ali_credit"
            android:title="@string/disable_all_animations" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/credits">
        <Preference
            android:icon="@drawable/ic_info"
            android:key="libraries"
            android:title="@string/open_source_libraries" />
        <Preference
            android:icon="@drawable/ic_info"
            android:key="credits" />
    </PreferenceCategory>
</PreferenceScreen>